Fpocket method in process

--- a/sandbox/test_fpocket.ipynb
+++ b/sandbox/test_fpocket.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80c296dca2e34d77b0cd28bf871a4d89",
+       "model_id": "359efadc82254104a8b846c433cfe213",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c71e5d54-c3d8-48b8-b756-86bfdca987c2",
    "metadata": {},
    "outputs": [],
@@ -64,42 +64,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "38a04cfa-c515-4839-9aa5-ba73f5eef032",
+   "execution_count": 4,
+   "id": "796bcd1a-bef1-49d5-a72c-b4c435d87fe8",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "POCKETMT WARNING | NotDigestedArgumentWarning: The min_alpha_sphere_radius from topomt.methods.fpocket.fpocket argument was not digested.Check  for more information. If you still need help, open a new issue in https://github.com/uibcdf/topomt/issues.\n",
-      "\n",
-      "POCKETMT WARNING | NotDigestedArgumentWarning: The max_alpha_sphere_radius from topomt.methods.fpocket.fpocket argument was not digested.Check  for more information. If you still need help, open a new issue in https://github.com/uibcdf/topomt/issues.\n",
+      "POCKETMT WARNING | NotDigestedArgumentWarning: The pbc from topomt.methods.fpocket.fpocket argument was not digested.Check  for more information. If you still need help, open a new issue in https://github.com/uibcdf/topomt/issues.\n",
       "\n",
       "POCKETMT WARNING | NotDigestedArgumentWarning: The radii from topomt.alpha_spheres.alpha_spheres.__init__ argument was not digested.Check  for more information. If you still need help, open a new issue in https://github.com/uibcdf/topomt/issues.\n",
-      "\n",
-      "POCKETMT WARNING | NotDigestedArgumentWarning: The skip_digestion from topomt.alpha_spheres.alpha_spheres.__init__ argument was not digested.Check  for more information. If you still need help, open a new issue in https://github.com/uibcdf/topomt/issues.\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Cannot compare PlainQuantity and <class 'str'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m alpha_spheres = \u001b[43mtmt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmethods\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfpocket\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmolecular_system\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmolsys\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/molsysmt/molsysmt/_private/digestion/digest.py:122\u001b[39m, in \u001b[36mdigest.<locals>.digestor.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    120\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m func(all_args[\u001b[33m'\u001b[39m\u001b[33mself\u001b[39m\u001b[33m'\u001b[39m], **final_args)\n\u001b[32m    121\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m122\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mfinal_args\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/topomt/topomt/methods/fpocket.py:42\u001b[39m, in \u001b[36mfpocket\u001b[39m\u001b[34m(molecular_system, selection, structure_indices, min_alpha_sphere_radius, max_alpha_sphere_radius, syntax)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m#radii = molsys.get_radii(selection=selection)\u001b[39;00m\n\u001b[32m     40\u001b[39m alpha_spheres = AlphaSpheres(points=coordinates[\u001b[32m0\u001b[39m], radii=\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m \u001b[43malpha_spheres\u001b[49m\u001b[43m.\u001b[49m\u001b[43mremove_small_alpha_spheres\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmin_alpha_sphere_radius\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     43\u001b[39m alpha_spheres.remove_big_alpha_spheres(max_alpha_sphere_radius)\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m alpha_spheres\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/topomt/topomt/alpha_spheres/alpha_spheres.py:131\u001b[39m, in \u001b[36mAlphaSpheres.remove_small_alpha_spheres\u001b[39m\u001b[34m(self, minimum_radius)\u001b[39m\n\u001b[32m    129\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mremove_small_alpha_spheres\u001b[39m(\u001b[38;5;28mself\u001b[39m, minimum_radius):\n\u001b[32m--> \u001b[39m\u001b[32m131\u001b[39m     indices_to_remove = np.where(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mradii\u001b[49m\u001b[43m \u001b[49m\u001b[43m<\u001b[49m\u001b[43m \u001b[49m\u001b[43mminimum_radius\u001b[49m)\n\u001b[32m    132\u001b[39m     \u001b[38;5;28mself\u001b[39m.remove_alpha_spheres(indices_to_remove)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Myopt/miniconda3/envs/topomt@uibcdf_3.12/lib/python3.12/site-packages/pint/facets/plain/quantity.py:1427\u001b[39m, in \u001b[36mPlainQuantity.<lambda>\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m   1422\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m DimensionalityError(\n\u001b[32m   1423\u001b[39m             \u001b[38;5;28mself\u001b[39m._units, other._units, \u001b[38;5;28mself\u001b[39m.dimensionality, other.dimensionality\n\u001b[32m   1424\u001b[39m         )\n\u001b[32m   1425\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m op(\u001b[38;5;28mself\u001b[39m.to_root_units().magnitude, other.to_root_units().magnitude)\n\u001b[32m-> \u001b[39m\u001b[32m1427\u001b[39m \u001b[34m__lt__\u001b[39m = \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;28mself\u001b[39m, other: \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcompare\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mop\u001b[49m\u001b[43m=\u001b[49m\u001b[43moperator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1428\u001b[39m \u001b[34m__le__\u001b[39m = \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;28mself\u001b[39m, other: \u001b[38;5;28mself\u001b[39m.compare(other, op=operator.le)\n\u001b[32m   1429\u001b[39m \u001b[34m__ge__\u001b[39m = \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;28mself\u001b[39m, other: \u001b[38;5;28mself\u001b[39m.compare(other, op=operator.ge)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Myopt/miniconda3/envs/topomt@uibcdf_3.12/lib/python3.12/site-packages/pint/facets/plain/quantity.py:101\u001b[39m, in \u001b[36mcheck_implemented.<locals>.wrapped\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m     99\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other, \u001b[38;5;28mlist\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m other \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other[\u001b[32m0\u001b[39m], \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)):\n\u001b[32m    100\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m101\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Myopt/miniconda3/envs/topomt@uibcdf_3.12/lib/python3.12/site-packages/pint/facets/plain/quantity.py:1410\u001b[39m, in \u001b[36mPlainQuantity.compare\u001b[39m\u001b[34m(self, other, op)\u001b[39m\n\u001b[32m   1408\u001b[39m                 \u001b[38;5;28;01mraise\u001b[39;00m OffsetUnitCalculusError(\u001b[38;5;28mself\u001b[39m._units)\n\u001b[32m   1409\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1410\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCannot compare PlainQuantity and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(other)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m   1412\u001b[39m \u001b[38;5;66;03m# Registry equality check based on util.SharedRegistryObject\u001b[39;00m\n\u001b[32m   1413\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._REGISTRY \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m other._REGISTRY:\n",
-      "\u001b[31mValueError\u001b[39m: Cannot compare PlainQuantity and <class 'str'>"
      ]
     }
    ],
+   "source": [
+    "components = tmt.methods.fpocket(molecular_system=molsys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "72865ca3-32c4-4a7c-ae3c-b53339d66fc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "103"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6095805-5690-4b4a-a2f5-2232505f56df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = puw.utils.numpy.vstack(components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3c50614-06dd-4bb7-943e-499c412a838b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import cKDTree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1056d3e2-b9e4-4bff-ad7f-b9445da39d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = cKDTree(components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cce4b3d0-f22c-4637-bc0c-6b7629061534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyunitwizard "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0bed319-d488-4935-a17f-3db1435be288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = []\n",
+    "for ii in components:\n",
+    "    aa.append(ii.mean(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa440592-468d-4220-bbd8-cdb1764d70d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38a04cfa-c515-4839-9aa5-ba73f5eef032",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "alpha_spheres = tmt.methods.fpocket(molecular_system=molsys)"
    ]
@@ -107,20 +179,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38eea489-5603-421a-8b61-ddeae35f4857",
+   "id": "7b5c0519-2fc3-43b3-b96d-c4552d09c5ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha_spheres.get_points_of_alpha_spheres([4])"
+    "alpha_spheres.get_centers_distance(0,8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fca223a-9af2-4f68-bf0a-fa42ea800ad9",
+   "id": "29343880-b3c4-4e47-ace8-6fb58f0b2b83",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from topomt._private.edges_list import connected_components_union_find"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e1f7f5-7124-4259-a4b0-d1d3dd7032d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = [[10,11], [11,12], [2,4], [4,2]]\n",
+    "\n",
+    "connected_components_union_find(aa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "686c1518-f242-4949-be6a-1f091486ed99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyunitwizard as puw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "293edf67-2eed-4f64-9788-5183d1464844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puw.utils.numpy.column_stack"
+   ]
   }
  ],
  "metadata": {
