--- a/sandbox/test_fpocket.ipynb
+++ b/sandbox/test_fpocket.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "415ba978044940c394edd171a994ab2d",
+       "model_id": "536f9e5a859648379cb9a1d076801073",
        "version_major": 2,
        "version_minor": 0
       },
@@ -17,24 +17,91 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "MOLSYSMT WARNING | UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
     "import molsysmt as msm\n",
-    "import topomt as tmt"
+    "import topomt as tmt\n",
+    "from topomt import pyunitwizard as puw"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5bbaefae-3201-4366-96fb-9e25685a3241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nglview as nv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8b96f1b4-d16d-4338-91f7-5d7b6009760f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = ([[-1.,  2.,  0.],\n",
+    "            [ 0.,  2.,  1.],\n",
+    "            [ 1., -2.,  1.],\n",
+    "            [ 0.,  1.,  1.],\n",
+    "            [ 0.,  0.,  0.],\n",
+    "            [-1., -1.,  0.]])\n",
+    "aspheres = tmt.alpha_spheres.AlphaSpheres(points*puw.unit('nm'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "46166a9e-2eb2-478e-8193-0a8c63e199fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "866270b0361f4a87996411f011acb4a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = aspheres.show_alpha_spheres(indices=[1,3])\n",
+    "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6a54861f-fb09-489b-bed7-393cddfeef6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Shape._make_func.<locals>.make_func.<locals>.func() got an unexpected keyword argument 'opacity'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mview\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m.\u001b[49m\u001b[43madd_sphere\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mopacity\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Shape._make_func.<locals>.make_func.<locals>.func() got an unexpected keyword argument 'opacity'"
+     ]
+    }
+   ],
+   "source": [
+    "view.shape.add_sphere([1,0,0], [1,1,0], 1.0, opacity=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "08e63530-56cd-4cdd-9ae9-16e4a26f97de",
    "metadata": {},
    "outputs": [],
@@ -44,41 +111,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "3a2138ed-b86f-44af-a06c-8e64cad55081",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63295718-9a9e-4d8a-ade7-4661b2368de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msm.view(pdbfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b86be516-76f2-446d-b457-0bcb3d3df975",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "POCKETMT WARNING | UserWarning: Removing 264 atoms from fpocket analysis (waters=253, ions=0, small_molecules=1).\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pockets = tmt.methods.fpocket2(molecular_system=pdbfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1abb4d7a-6165-484d-8e4d-ab938f23763b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "83\n",
-      "82\n",
-      "104\n",
-      "68\n",
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ii in pockets:\n",
     "    print(len(ii))"
@@ -86,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b10ac52e-d487-4a05-8eed-96cc6dd46cd7",
    "metadata": {},
    "outputs": [],
@@ -96,21 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "45779809-6d6c-4e1e-a0bd-09c2bbe8fd37",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(result.to_dict())"
    ]
@@ -170,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
